--- a/강호현/Chapter03.ipynb
+++ b/강호현/Chapter03.ipynb
@@ -2511,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2572,7 @@
        "13      Barkworth, Mr Algernon H    1st  NaN    male         1        0"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2598,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2608,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2679,7 +2679,7 @@
        "13      Barkworth, Mr Algernon H    1st  NaN     NaN         1        0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2698,7 +2698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2776,7 @@
        "13      Barkworth, Mr Algernon H    1st      male         1        0"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2788,24 +2788,80 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>PClass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>SexCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Aubert, Mrs Leontine Pauline</td>\n",
+       "      <td>1st</td>\n",
+       "      <td></td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Barkworth, Mr Algernon H</td>\n",
+       "      <td>1st</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Name PClass Age     Sex  Survived  SexCode\n",
+       "12  Aubert, Mrs Leontine Pauline    1st      female         1        1\n",
+       "13      Barkworth, Mr Algernon H    1st         NaN         1        0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "* na_filter == False : NaN 변환하지 않는다."
+    "pd.read_csv(url, na_values=['male'], keep_default_na=False)[12:14]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe = pd.read_csv(url, na_filter=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2820,7 +2876,101 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(url, keep_default_na=False).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name          0\n",
+       "PClass        0\n",
+       "Age         557\n",
+       "Sex           0\n",
+       "Survived      0\n",
+       "SexCode       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(url, keep_default_na=True).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name          0\n",
+       "PClass        0\n",
+       "Age         557\n",
+       "Sex           0\n",
+       "Survived      0\n",
+       "SexCode       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv(url).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* na_filter == False : NaN 변환하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pd.read_csv(url, na_filter=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name        0\n",
+       "PClass      0\n",
+       "Age         0\n",
+       "Sex         0\n",
+       "Survived    0\n",
+       "SexCode     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2831,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2892,7 +3042,7 @@
        "13      Barkworth, Mr Algernon H    1st        male         1        0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3177,7 +3327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.10 행 삭제하기\n",
+    "## 3.11 행 삭제하기\n",
     "* 불리언 조건으로 삭제할 행을 제한 새로운 데이터프레임을 만든다."
    ]
   },
@@ -3832,6 +3982,28 @@
    ],
    "source": [
     "dataframe.groupby('Survived')['Name'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    863\n",
+       "1    450\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe['Survived'].value_counts()"
    ]
   },
   {
@@ -4833,7 +5005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4913,7 +5085,7 @@
        "2  6     Z    z"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4938,7 +5110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -5009,7 +5181,7 @@
        "2  3     C    F  6     Z    z"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5038,7 +5210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5104,7 +5276,7 @@
        "3  10  Chris  Chilon"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5114,6 +5286,31 @@
     "\n",
     "# 행 추가\n",
     "dataframe_a.append(row, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Can only append a Series if ignore_index=True or if the Series has a name",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-35-6bd6e0a5787e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# 행 추가\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mdataframe_a\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mappend\u001b[1;34m(self, other, ignore_index, verify_integrity, sort)\u001b[0m\n\u001b[0;32m   7047\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   7048\u001b[0m                 raise TypeError(\n\u001b[1;32m-> 7049\u001b[1;33m                     \u001b[1;34m\"Can only append a Series if ignore_index=True \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   7050\u001b[0m                     \u001b[1;34m\"or if the Series has a name\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   7051\u001b[0m                 )\n",
+      "\u001b[1;31mTypeError\u001b[0m: Can only append a Series if ignore_index=True or if the Series has a name"
+     ]
+    }
+   ],
+   "source": [
+    "row = pd.Series([10, 'Chris', 'Chilon'], index = ['id','first','last'])\n",
+    "\n",
+    "# 행 추가\n",
+    "dataframe_a.append(row, ignore_index=False)"
    ]
   },
   {
